Port away from using KNS3::QtQuickDialogWrapper::exec internally

BUG: 450702